- bug 421 - correct previous checkin email - I meant 50 when I said one hundred pixels - shorten the height from 51 to 50 pixels.  IE and Firefox behave differently   here.  A one pixel gap results when using IE, and the gap is fairly obvious   so I'm going to take the good enough route and err on Firefox being 1 pixel   too short for now, it's less obvious.
TODO - set style conditionally based on user-agent, or use a different style
  sheet for each agent.


git-svn-id: https://www.redhotpenguin.com/svn/sl/trunk@411 bd012f14-6cfe-0310-9a23-91b8f1fede10

--- a/proxyserver/css/sl.css
+++ b/proxyserver/css/sl.css
@@ -30,7 +30,7 @@ p.sl {
 
 #sl_ctr {
     position: relative;
-    top: 51px;
+    top: 50px;
 	margin-top: 0px
 }
 
